Move segmentbytime database parameter and add missing files
